fixed alignment

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -118,6 +118,7 @@ html{
 .information{
 	display: flex;
 	justify-content: space-around;
+	padding-left: 90px;
 }
 
 .title{
@@ -136,7 +137,7 @@ html{
 
 .philosophy p, .appointments p{
 	padding-top: 1rem;
-	width: 15rem;
+	width: 19rem;
 }
 
 .philosophy{
@@ -193,9 +194,9 @@ footer img{
 		font-size: 1.33rem;
 	}
 
-/*	.philosophy{
-	margin-right: 25%;
-}*/
+	.information{
+		padding: 0;
+	}
 }
 
 /*Mobile Screen*/
@@ -242,6 +243,7 @@ footer img{
 	.information{
 		flex-direction: column;
 		align-items: center;
+		padding: 0;
 	}
 
 	.philosophy, .appointments{
